# frame-automation

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/plans/: 2026-01-11-themes-design.md
src/frame_automation/: __init__.py  main.py
src/frame_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_main.py
themes/: default.css  paper-bleed.css  split-bleed.css
themes/paper/: theme.css
themes/split/: theme.css
