[project]
name = "frame-automation"
version = "0.1.0"
description = "Display weekly goals on Samsung Frame TV Art Mode"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.57.0",
    "samsungtvws>=3.0.3",
]

[project.scripts]
frame-update = "frame_automation.main:main"

[tool.uv]
package = true
