[project]
name = "frame-automation"
version = "0.1.0"
description = "Display markdown content on Samsung Frame TV Art Mode"
requires-python = ">=3.13"
dependencies = [
    "markdown>=3.7",
    "playwright>=1.57.0",
    "samsungtvws>=3.0.3",
]

[project.scripts]
frame-update = "frame_automation.main:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
package = true
