[project]
name = "frame-automation"
version = "0.1.0"
description = "Display markdown content on Samsung Frame TV Art Mode"
requires-python = ">=3.13"
dependencies = [
    "samsungtvws>=3.0.3",
    "wakeonlan>=3.1.0",
]

[project.optional-dependencies]
render = [
    "markdown>=3.7",
    "playwright>=1.57.0",
]

[project.scripts]
frame-update = "frame_automation.main:main"
frame-off = "frame_automation.main:main_off"
frame-art = "frame_automation.main:main_art"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
package = true
